logo page made responsive, scrollbar bug appwide fixed, some unneeded css removed

--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,8 @@
   justify-content: center;
   background-color: white;
   margin-top: 88px;
-  height: 100%;
   overflow: auto;
+  z-index: 1;
 }
 
 .flex-spacer {
